update pipeline
